🐛 Fix: 모임 기록 버그 수정
- 모임 기록 생성/삭제 후 뷰 갱신이 되지 않는 버그 수정
- 전체 정산 텍스트 색상 버그 수정
- 모임 기록 생성 뷰에서 이미지 추가 버튼이 보이지 않는 버그 수정

Related to: #323

--- a/app/src/main/res/layout/activity_moim_diary_detail.xml
+++ b/app/src/main/res/layout/activity_moim_diary_detail.xml
@@ -257,8 +257,8 @@
                         android:layout_marginEnd="20dp"
                         android:drawableEnd="@drawable/ic_arrow_right"
                         android:drawablePadding="8dp"
-                        android:drawableTint="@color/text_unselected"
-                        android:textColor="@{viewModel.moimPayment.totalAmount == BigDecimal.ZERO ? @color/text_unselected : @color/main_text}" />
+                        app:drawableTint="@{viewModel.moimPayment.totalAmount.compareTo(BigDecimal.ZERO) == 0 ? @color/text_unselected : @color/main_text}"
+                        android:textColor="@{viewModel.moimPayment.totalAmount.compareTo(BigDecimal.ZERO) == 0 ? @color/text_unselected : @color/main_text}" />
                 </LinearLayout>
 
                 <androidx.viewpager2.widget.ViewPager2
