🛠️ Chore: 모임 기록 패키지 이동
Related to: #323

--- a/app/src/main/res/layout/activity_moim_diary_detail.xml
+++ b/app/src/main/res/layout/activity_moim_diary_detail.xml
@@ -16,7 +16,7 @@
 
         <variable
             name="viewModel"
-            type="com.mongmong.namo.presentation.ui.community.diary.MoimDiaryViewModel" />
+            type="com.mongmong.namo.presentation.ui.community.moim.diary.MoimDiaryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
