--- a/app/src/main/res/layout/dialog_activity_payment.xml
+++ b/app/src/main/res/layout/dialog_activity_payment.xml
@@ -7,7 +7,7 @@
         <import type="android.view.View"/>
         <variable
             name="viewModel"
-            type="com.mongmong.namo.presentation.ui.community.diary.MoimDiaryViewModel" />
+            type="com.mongmong.namo.presentation.ui.community.moim.diary.MoimDiaryViewModel" />
         <variable
             name="payment"
             type="com.mongmong.namo.domain.model.ActivityPayment" />
