🐛 Fix: 활동 참석자 전체 인원이 뜨지 않는 버그 수정
Related to: #323

--- a/app/src/main/res/layout/item_moim_diary_activity.xml
+++ b/app/src/main/res/layout/item_moim_diary_activity.xml
@@ -335,7 +335,7 @@
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/ic_arrow_right"
                     android:drawablePadding="8dp"
-                    app:totalAmount="@{activity.payment.totalAmount}"/>
+                    app:activityTotalAmount="@{activity.payment.totalAmount}"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
