✨ Feat: 보관함 캘린더 개인/모임 기록 색 구분 추가
Related to: #330

--- a/app/src/main/res/layout/item_diary_calendar_date.xml
+++ b/app/src/main/res/layout/item_diary_calendar_date.xml
@@ -27,9 +27,8 @@
             app:layout_constraintTop_toTopOf="parent"/>
         <ImageView
             android:id="@+id/diary_calendar_has_diary_indicator_iv"
-            android:src="@drawable/img_mongi_default"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:visibility="gone"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="13dp"
