--- a/app/src/main/res/layout/item_moim_diary.xml
+++ b/app/src/main/res/layout/item_moim_diary.xml
@@ -95,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@{diary.participantInfo.count}"
+                android:text="@{String.valueOf(diary.participantInfo.count)}"
                 app:layout_constraintStart_toStartOf="@+id/item_moim_diary_date_tv"
                 app:layout_constraintTop_toBottomOf="@+id/item_moim_diary_title_tv"
                 tools:text="10" />
