--- a/app/src/main/res/layout/item_schedule_preview_moim.xml
+++ b/app/src/main/res/layout/item_schedule_preview_moim.xml
@@ -8,7 +8,7 @@
         <import type="com.mongmong.namo.presentation.utils.ScheduleTimeConverter"/>
         <variable
             name="schedule"
-            type="com.mongmong.namo.domain.model.MoimCalendarSchedule" />
+            type="com.mongmong.namo.domain.model.CommunityCommonSchedule" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
