--- a/app/src/main/res/layout/fragment_category_detail.xml
+++ b/app/src/main/res/layout/fragment_category_detail.xml
@@ -92,94 +92,44 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
 
-                <TextView
-                    android:id="@+id/category_detail_defalut_color_tv"
-                    android:text="@string/category_detail_normal_color"
-                    android:layout_marginTop="25dp"
-                    app:layout_constraintTop_toBottomOf="@id/category_detail_title_et"
-                    app:layout_constraintStart_toStartOf="parent"
-                    style="@style/category_setting_tv" />
-
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:id="@+id/category_detail_color_ll"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="@id/category_detail_defalut_color_tv"
-                    app:layout_constraintBottom_toBottomOf="@id/category_detail_defalut_color_tv"
-                    app:layout_constraintEnd_toEndOf="parent">
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/schedule_color_cv"
-                        app:cardBackgroundColor="@color/main_pink"
-                        style="@style/category_cv">
-                        <ImageView
-                            android:id="@+id/schedule_color_select_iv"
-                            style="@style/img_category_check"/>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/schedule_plan_color_cv"
-                        android:layout_marginStart="20dp"
-                        app:cardBackgroundColor="@color/main_yellow"
-                        style="@style/category_cv">
-                        <ImageView
-                            android:id="@+id/schedule_plan_color_select_iv"
-                            style="@style/img_category_check"/>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/schedule_parttime_color_cv"
-                        android:layout_marginStart="20dp"
-                        app:cardBackgroundColor="@color/main_blue"
-                        style="@style/category_cv">
-                        <ImageView
-                            android:id="@+id/schedule_parttime_color_select_iv"
-                            style="@style/img_category_check"/>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/schedule_group_color_cv"
-                        android:layout_marginStart="20dp"
-                        app:cardBackgroundColor="@color/main"
-                        style="@style/category_cv">
-                        <ImageView
-                            android:id="@+id/schedule_group_color_select_iv"
-                            style="@style/img_category_check"/>
-                    </androidx.cardview.widget.CardView>
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintTop_toBottomOf="@id/category_detail_title_et"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <TextView
+                        android:id="@+id/category_detail_color_tv"
+                        android:text="@string/category_color"
+                        style="@style/category_setting_tv" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/category_palette_rv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="-15dp"
+                        android:layout_gravity="end"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:spanCount="5"
+                        tools:itemCount="15"
+                        tools:listitem="@layout/item_palette_color"
+                        app:layout_constraintTop_toTopOf="@id/category_detail_color_tv"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/category_palette_title_tv"
-                    android:layout_marginTop="55dp"
-                    android:text="@string/category_palette"
-                    app:layout_constraintTop_toBottomOf="@id/category_detail_defalut_color_tv"
-                    app:layout_constraintStart_toStartOf="parent"
-                    style="@style/category_setting_tv"/>
-
-                <TextView
-                    android:id="@+id/category_paletted_name_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/palette_normal"
-                    android:textColor="@color/main_text"
-                    android:background="@null"
-                    android:textSize="15sp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/category_palette_title_tv"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/category_palette_rv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="-15dp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:spanCount="5"
-                    tools:listitem="@layout/item_palette_color"
-                    app:layout_constraintTop_toTopOf="@id/category_palette_title_tv"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
-                <TextView
                     android:id="@+id/category_share_tv"
                     android:text="@string/category_detail_isShare"
-                    android:layout_marginTop="70dp"
-                    app:layout_constraintTop_toBottomOf="@id/category_paletted_name_tv"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintTop_toBottomOf="@id/category_detail_color_ll"
                     app:layout_constraintStart_toStartOf="parent"
                     style="@style/category_setting_tv"/>
 
