--- a/app/src/main/res/layout/item_diary_calendar_date.xml
+++ b/app/src/main/res/layout/item_diary_calendar_date.xml
@@ -31,6 +31,7 @@
             android:visibility="gone"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="13dp"
+            android:src="@drawable/ic_archive_diary_small"
             app:layout_constraintTop_toBottomOf="@id/diary_calendar_date_tv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
