🎨 Design: 친구 초대 화면 수정
- 초대할 친구 아이템 UI 구현
- 전체 선택 취소, 초대 현황 표시, 초대하기 버튼

Related to: #347

--- a/app/src/main/res/layout/item_friend_invite.xml
+++ b/app/src/main/res/layout/item_friend_invite.xml
@@ -16,7 +16,7 @@
         android:backgroundTint="@color/item_background"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="16dp"
         android:paddingVertical="12dp"
         android:paddingHorizontal="16dp">
         
@@ -67,14 +67,14 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/item_friend_introduction_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:text="@{friend.introduction}"
-                tools:text="친구가 직접 작성한 한 줄 소개"
-                style="@style/subtext_12" />
+<!--            <TextView-->
+<!--                android:id="@+id/item_friend_introduction_tv"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="6dp"-->
+<!--                android:text="@{friend.introduction}"-->
+<!--                tools:text="친구가 직접 작성한 한 줄 소개"-->
+<!--                style="@style/subtext_12" />-->
 
         </LinearLayout>
 
@@ -82,7 +82,7 @@
             android:id="@+id/item_friend_invite_btn"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:checked="true"
+            android:checked="false"
             android:button="@null"
             android:background="@drawable/selector_invite"/>
 
