--- a/app/src/main/res/layout/activity_friend_invite.xml
+++ b/app/src/main/res/layout/activity_friend_invite.xml
@@ -69,36 +69,130 @@
             app:layout_constraintTop_toTopOf="@id/friend_invite_search_et"
             style="@style/search_btn"/>
 
+        <!-- 친구 리스트가 없을 때 표시할 empty view -->
         <LinearLayout
+            android:id="@+id/friend_invite_empty_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:visibility="@{viewModel.friendList.empty ? View.VISIBLE : View.GONE}"
+            app:layout_constraintTop_toBottomOf="@id/friend_invite_search_btn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:src="@drawable/img_group_empty"/>
+
+            <TextView
+                android:id="@+id/friend_invite_empty_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:text="@string/moim_schedule_invite_friend_empty"
+                style="@style/content_regular"/>
+
+        </LinearLayout>
+
+        <!-- 초대할 친구 -->
+        <LinearLayout
+            android:id="@+id/friend_invite_preparatory_ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="25dp"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/friend_invite_search_btn">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="25dp"
                 android:text="@string/moim_schedule_invite_friend"
-                android:drawableEnd="@drawable/ic_arrow_up"
                 style="@style/content_bold"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="horizontal"
+                tools:listitem="@layout/item_friend_to_invite"/>
+
+        </LinearLayout>
+
+        <!-- 초대 -->
+        <LinearLayout
+            android:id="@+id/friend_invite_reset_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="25dp"
+            android:orientation="horizontal"
+            android:visibility="@{viewModel.friendToInviteList.empty ? View.GONE : View.VISIBLE}"
+            app:layout_constraintTop_toBottomOf="@id/friend_invite_preparatory_ll">
+
             <TextView
-                android:id="@+id/friend_invite_empty_tv"
+                android:id="@+id/friend_invite_reset_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/moim_schedule_invite_friend_empty"
-                style="@style/content_regular"/>
+                android:padding="3dp"
+                android:text="@string/moim_schedule_invite_friend_reset"
+                android:textColor="@color/main_text"
+                style="@style/subtext_14"/>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/friend_invite_selected_num_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_placeholder"
+                tools:text="3 / 7"
+                style="@style/button_label"/>
+
+            <TextView
+                android:id="@+id/friend_invite_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="4dp"
+                android:background="@drawable/bg_basic_btn"
+                android:textColor="@color/white"
+                android:text="@string/moim_schedule_do_invite"
+                style="@style/button_label"/>
+
+        </LinearLayout>
+
+        <!-- 모든 친구 -->
+        <LinearLayout
+            android:id="@+id/friend_invite_all_friend_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="25dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/friend_invite_reset_ll">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/moim_schedule_all_friend"
+                style="@style/content_bold"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/friend_invite_list_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="20dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="12dp"
                 android:visibility="@{viewModel.friendList.empty ? View.GONE : View.VISIBLE}"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_friend_invite"
