--- a/app/src/main/res/layout/activity_personal_diary_detail.xml
+++ b/app/src/main/res/layout/activity_personal_diary_detail.xml
@@ -268,7 +268,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             style="@style/content_bold"
-            android:id="@+id/diary_save_btn"
+            android:id="@+id/register_save_btn"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@{viewModel.diaryChanged ? @color/main : @color/text_unselected}"
