--- a/app/src/main/res/layout/fragment_diary_archive.xml
+++ b/app/src/main/res/layout/fragment_diary_archive.xml
@@ -42,6 +42,9 @@
             android:layout_marginEnd="32dp"
             android:layout_marginTop="8dp"
             android:text="@={viewModel.keyword}"
+            android:inputType="text"
+            android:maxLength="8"
+            android:maxLines="1"
             app:layout_constraintEnd_toStartOf="@+id/diary_archive_filter_search_btn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/diary_archive_filter" />
