--- a/app/src/main/res/layout/fragment_category_detail.xml
+++ b/app/src/main/res/layout/fragment_category_detail.xml
@@ -5,146 +5,167 @@
 
     <data>
         <import type="com.mongmong.namo.presentation.enums.CategoryColor"/>
+        <import type="android.view.View"/>
         <variable
             name="viewModel"
             type="com.mongmong.namo.presentation.ui.home.category.CategoryViewModel" />
+        <variable
+            name="isEditMode"
+            type="Boolean"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!--플로팅 캘린더 카테고리 색상 설정 화면-->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_bottomsheet"
-            android:elevation="@dimen/cardview_default_elevation"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/category_detail_back_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category"
+            android:padding="4dp"
+            android:drawableStart="@drawable/ic_arrow_left"
+            android:drawablePadding="8dp"
+            style="@style/content_regular"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/category_detail_header_tv"
+            app:layout_constraintBottom_toBottomOf="@id/category_detail_header_tv"/>
+
+        <TextView
+            android:id="@+id/category_detail_header_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:text="@{isEditMode ? @string/category_edit : @string/category_new}"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            style="@style/content_bold"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="@string/category_edit"/>
+
+        <TextView
+            android:id="@+id/category_detail_save_tv"
+            android:layout_width="wrap_content"
+            android:padding="4dp"
+            android:layout_height="wrap_content"
+            android:text="@string/dialog_save"
+            android:textColor="@color/main_text"
+            android:textSize="15sp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintTop_toTopOf="@id/category_detail_header_tv"
+            app:layout_constraintBottom_toBottomOf="@id/category_detail_header_tv"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/category_detail_content_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/category_detail_back_iv">
+
+            <EditText
+                android:id="@+id/category_detail_title_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/category_hint"
+                android:textColorHint="@color/text_placeholder"
+                android:paddingVertical="5dp"
+                android:singleLine="true"
+                android:text="@={viewModel.category.name}"
+                android:background="@null"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/header"/>
 
             <LinearLayout
-                android:id="@+id/category_detail_back_iv"
-                android:layout_width="wrap_content"
+                android:id="@+id/category_detail_color_ll"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="10dp"
-                android:gravity="center_vertical"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="15dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@id/category_detail_title_et"
                 app:layout_constraintStart_toStartOf="parent">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_left"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
-
-
                 <TextView
-                    android:id="@+id/category_detail_new_tv"
+                    android:id="@+id/category_detail_color_tv"
+                    android:text="@string/category_color"
+                    style="@style/category_setting_tv" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/category_palette_rv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/category_detail_setting"
-                    android:textColor="@color/main_text"
-                    android:textSize="15sp"
-                    android:layout_marginStart="10dp"/>
+                    android:layout_marginTop="-15dp"
+                    android:layout_gravity="end"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="5"
+                    tools:itemCount="20"
+                    tools:listitem="@layout/item_palette_color"
+                    app:layout_constraintTop_toTopOf="@id/category_detail_color_tv"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
             </LinearLayout>
 
             <TextView
-                android:id="@+id/category_detail_save_tv"
-                android:layout_width="wrap_content"
-                android:padding="10dp"
-                android:layout_height="wrap_content"
-                android:text="@string/dialog_save"
-                android:textColor="@color/main_text"
-                android:textSize="15sp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="15dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/category_detail_calender_ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
+                android:id="@+id/category_share_tv"
+                android:text="@string/category_detail_share"
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@id/category_detail_color_ll"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/category_detail_back_iv">
+                style="@style/category_setting_tv"/>
 
-                <EditText
-                    android:id="@+id/category_detail_title_et"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/category_hint"
-                    android:textColorHint="@color/text_placeholder"
-                    android:paddingVertical="5dp"
-                    android:singleLine="true"
-                    android:text="@={viewModel.category.name}"
-                    android:textColor="@color/main_text"
-                    android:textSize="22sp"
-                    android:background="@null"
-                    android:textStyle="bold"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/category_share_toggle_iv"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:layout_constraintTop_toTopOf="@id/category_share_tv"
+                app:layout_constraintBottom_toBottomOf="@id/category_share_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                style="@style/category_toggle"/>
 
-                <LinearLayout
-                    android:id="@+id/category_detail_color_ll"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintTop_toBottomOf="@id/category_detail_title_et"
-                    app:layout_constraintStart_toStartOf="parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/main_text"
+                android:text="@string/category_detail_share_guide"
+                app:layout_constraintStart_toStartOf="@id/category_share_tv"
+                app:layout_constraintTop_toBottomOf="@id/category_share_tv"
+                style="@style/subtext_12"/>
 
-                    <TextView
-                        android:id="@+id/category_detail_color_tv"
-                        android:text="@string/category_color"
-                        style="@style/category_setting_tv" />
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"/>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/category_palette_rv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="-15dp"
-                        android:layout_gravity="end"
-                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                        app:spanCount="5"
-                        tools:itemCount="15"
-                        tools:listitem="@layout/item_palette_color"
-                        app:layout_constraintTop_toTopOf="@id/category_detail_color_tv"
-                        app:layout_constraintEnd_toEndOf="parent"/>
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/category_share_tv"
-                    android:text="@string/category_detail_isShare"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintTop_toBottomOf="@id/category_detail_color_ll"
-                    app:layout_constraintStart_toStartOf="parent"
-                    style="@style/category_setting_tv"/>
-
-                <androidx.appcompat.widget.SwitchCompat
-                    android:id="@+id/category_toggle_iv"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    app:layout_constraintTop_toTopOf="@id/category_share_tv"
-                    app:layout_constraintBottom_toBottomOf="@id/category_share_tv"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    style="@style/category_toggle"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.mongmong.namo.presentation.ui.common.CustomDrawableTextView
+            android:id="@+id/category_delete_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="42dp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="20dp"
+            android:gravity="center"
+            android:drawableStart="@drawable/ic_delete"
+            android:drawablePadding="12dp"
+            app:drawableStartSize="20dp"
+            android:text="@string/category_delete"
+            android:visibility="@{isEditMode ? View.VISIBLE : View.GONE}"
+            android:textColor="@color/black"
+            android:background="@drawable/bg_basic_outline_btn"
+            app:layout_constraintTop_toBottomOf="@id/category_detail_content_ll"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/content_regular"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
