--- a/app/src/main/res/layout/item_dialog_schedule_category.xml
+++ b/app/src/main/res/layout/item_dialog_schedule_category.xml
@@ -37,18 +37,37 @@
             app:layout_constraintEnd_toEndOf="@id/category_color_view"
             android:visibility="gone"/>
 
-        <TextView
-            android:id="@+id/category_name_tv"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/category_edit_ll"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:text="@{category.name}"
+            android:layout_marginStart="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="@id/category_color_view"
             app:layout_constraintBottom_toBottomOf="@id/category_color_view"
             app:layout_constraintStart_toEndOf="@id/category_color_view"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="일정(기본)"
-            style="@style/content_regular"/>
+            app:layout_constraintHorizontal_bias="0">
+
+            <TextView
+                android:id="@+id/category_name_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@{category.name}"
+                android:gravity="start"
+                tools:text="일정(기본)"
+                style="@style/content_regular"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="12dp"
+                android:layout_marginStart="12dp"
+                android:src="@drawable/ic_arrow_right"
+                android:layout_gravity="center_vertical"/>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
