🐛 Fix: 일정 다이얼로그 상단 휴지통 버튼 노출여부 설정
- 카테고리 설정 화면에서는 휴지통 버튼 숨기기
- 일정 화면에서는 생성/편집 모드에 따라 노출 여부 결정하기

Related to: #346

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="viewModel"
+            type="com.mongmong.namo.presentation.ui.home.schedule.PersonalScheduleViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/schedule_background_layout"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,13 +21,14 @@
             android:layout_width="65dp"
             android:layout_height="70dp"
             android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@id/schedule_container_layout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="@{(viewModel.isShowTopDeleteBtn == true) ? View.VISIBLE : View.GONE}"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="25dp"
             app:cardElevation="5dp"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="true"
+            app:layout_constraintBottom_toTopOf="@id/schedule_container_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="24dp"
